--- a/src/components/PhysicalSchemaDialog.css
+++ b/src/components/PhysicalSchemaDialog.css
@@ -2,10 +2,10 @@
 {
 color: #333;
 font-family: Univers Next for HSBC;
-font-size: 20px;
+font-size: 12px;
 font-style: normal;
 font-weight: 500;
-line-height: 24px;
+line-height: 12px;
 }
 .MuiTableCell-root td{
 color: #333;
@@ -14,4 +14,7 @@ font-size: 12px;
 font-style: normal;
 font-weight: 500;
 line-height: 24px;
+}
+.mr16{
+    margin-right: 16px;
 }
